--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,3 +1,2 @@
 <h1>Login Page</h1>
-<p>{{ authURL }}</p>
-<button type="button">Login</button>
+<a type="button" ng-href="{{ authURL.url }}">Login</a>
