add routes to controllers, view templates, and added anchor tags to the default.html page

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,1 +1,6 @@
 <h1>Home Page</h1>
+
+<a type="button" ng-href="{{ listURL }}">List Gists</a>
+<a type="button" ng-href="{{ createURL }}">Create</a>
+<a type="button" ng-href="{{ editURL }}">Edit</a>
+<a type="button" ng-href="{{ deleteURL }}">Delete</a>
