add controllers, scope variables on auth-controller, templates, fixed routes

--- a/public/views/createGist.html
+++ b/public/views/createGist.html
@@ -1,1 +1,11 @@
 <h1>Create Gist</h1>
+<div>
+  <fieldset>
+    <div>
+      <label for="">Title</label>
+        <input type="text" id="gist-title" type="text" ng-model="new_gists">
+      <label for=""> Body</label>
+        <input type="text" id="gist-body" type="text" ng-model="new_gists">
+    </div>
+  </fieldset>
+</div>
