add gist controllers && hook up http request with access_token

--- a/public/views/createGist.html
+++ b/public/views/createGist.html
@@ -2,6 +2,7 @@
 <div>
   <fieldset>
     <div>
+      {{ gists }}
       <label for="">Title</label>
         <input type="text" id="gist-title" type="text" ng-model="new_gists">
       <label for=""> Body</label>
