add dashboard view && display controller to display single gist

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -4,3 +4,8 @@
 <a type="button" ng-href="{{ createURL }}">Create</a>
 <a type="button" ng-href="{{ editURL }}">Edit</a>
 <a type="button" ng-href="{{ deleteURL }}">Delete</a>
+
+
+<div>
+  {{ gist }}
+</div>
