--- a/public/views/editGist.html
+++ b/public/views/editGist.html
@@ -1,1 +1,16 @@
 <h1>Edit Gist</h1>
+<div>
+    <fieldset>
+      <div>
+        <label for="edit_gist_description">Description</label>
+        <input id="edit_gist_decription" type="text" ng-model="edit_gist.description">
+      </div>
+      <div>
+        <label for="edit_gist_content">Content</label>
+        <input id="edit_gist_content" type="text" ng-model="edit_gist.fileContent">
+      </div>
+      <div>
+        <button type="button" ng-click="GistService.editGist(cookies, edit_gist, gist_id); edit_gist={};">Edit Gist</button>
+      </div>
+    </fieldset>
+</div>
