fixed label for filename

--- a/public/views/editGist.html
+++ b/public/views/editGist.html
@@ -2,6 +2,9 @@
 <div>
     <fieldset>
       <div>
+        <label for="edit_gist_file">File Name: {{edit_gist.filename}}</label>
+      </div>
+      <div>
         <label for="edit_gist_description">Description</label>
         <input id="edit_gist_decription" type="text" ng-model="edit_gist.description">
       </div>
