delete functionality on edit gist view

--- a/public/views/editGist.html
+++ b/public/views/editGist.html
@@ -15,5 +15,8 @@
       <div>
         <button type="button" ng-click="GistService.editGist(cookies, edit_gist, gist_id); edit_gist={};">Edit Gist</button>
       </div>
+      <div>
+        <button type="button" ng-click="GistService.deleteGist(cookies, gist_id); edit_gist={};">Delete Gist</button>
+      </div>
     </fieldset>
 </div>
