--- a/public/views/createGist.html
+++ b/public/views/createGist.html
@@ -14,7 +14,7 @@
       <input id="new_gist_content" type="text" ng-model="new_gist.fileContent">
     </div>
     <div>
-      <button type="button" ng-click="GistService.postGists(cookies, new_gist); new_gist={};">Create Gist</button>
+      <button type="button" ng-click="GistService.postGists(cookies, new_gist); process_done();">Create Gist</button>
     </div>
   </fieldset>
 </div>
