--- a/public/views/editGist.html
+++ b/public/views/editGist.html
@@ -13,10 +13,10 @@
         <input id="edit_gist_content" type="text" ng-model="edit_gist.fileContent">
       </div>
       <div>
-        <button type="button" ng-click="GistService.editGist(cookies, edit_gist, gist_id); edit_gist={};">Edit Gist</button>
+        <button type="button" ng-click="GistService.editGist(cookies, edit_gist, gist_id); process_done()">Save</button>
       </div>
       <div>
-        <button type="button" ng-click="GistService.deleteGist(cookies, gist_id); edit_gist={};">Delete Gist</button>
+        <button type="button" ng-click="GistService.deleteGist(cookies, gist_id); process_done()">Delete Gist</button>
       </div>
     </fieldset>
 </div>
