changed express routes to handle html5Mode angular

--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,3 +1,11 @@
-<h1>Login Page</h1>
-<p>{{authURL.url}}</p>
-<a type="button" ng-href="{{ authURL.url }}">Login</a>
+
+<div class="container">
+  <div class="row">
+    <h1>Login Page</h1>
+  </div>
+  <div class="row">
+    <div class="six columns">
+      <a class="button" ng-href="{{ authURL.url }}">Login</a>
+    </div>
+  </div>
+</div>
