--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -3,8 +3,17 @@ body {
   background-color : #eee;
 }
 
+
 .row {
   background-color : #fff;
+
+  h1, h5 {
+    text-align : center;
+  }
+
+  p{
+    word-wrap : break-word;
+  }
 }
 
 .column {
