--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -3,9 +3,6 @@
   <div class="row">
     <h1>Gist Manager</h1>
   </div>
-  <div class="row">
-    <h5>Home Page</h5>
-  </div>
 
   <div class="row">
     <div class="four columns">
@@ -23,8 +20,8 @@
     <div class="eight columns">
 
       <div class="row">
-        <a type="button" ng-href="/#/create">Create</a>
-        <a type="button" ng-href="/#/edit/{{ displayGist.id }}">Edit</a>
+        <a class="button" type="button" ng-href="/#/create">Create</a>
+        <a class="button" type="button" ng-href="/#/edit/{{ displayGist.id }}">Edit</a>
       </div>
 
       <div class="row">
