--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,23 +6,26 @@ body {
 .row {
   background-color : #fff;
 
-  h1, h5 {
+  h1 {
     text-align : center;
   }
 
-  p{
+  p {
     word-wrap : break-word;
   }
 }
 
-.column {
+.columns {
   border : 1px solid black;
 }
 
 ul {
   list-style-type : none;
+  li {
+    text-decoration : none;
+  }
 }
 
-a{
+a {
   text-decoration : none;
 }
