--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -2,10 +2,11 @@
 <div class="container">
   <div class="row">
     <h1>Gist Manager</h1>
+    <hr class="style-two">
   </div>
 
   <div class="row">
-    <div class="four columns">
+    <div class="four columns" id="left-sidebar">
       <ul>
         <li ng-repeat="gist in gists">
           <div ng-click="display(gist.id)" style="background : #eee; "> <a href="">{{ gist.description }}</a>
