--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -15,8 +15,20 @@ body {
   }
 }
 
+/* Gradient transparent - color - transparent */
+
+hr.style-two {
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 .columns {
-  border : 1px solid black;
+}
+
+#left-sidebar {
+  border-right: 1px solid black;
+   box-shadow: 5px 0px 5px #AAA;
 }
 
 ul {
