styling on default page

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,9 +1,7 @@
 <div class="container">
   <div class="row">
-    <h1>Home Page</h1>
-  </div>
-  <div class="row">
-    <a class="button" ng-href="/#/dashboard">Dashboard</a>
-    <a class="button" ng-href="{{ authURL.url }}">Login With Github</a>
+    <h1>Gist Manager</h1>
+    <a class="button button-primary" ng-href="/#/dashboard">Dashboard</a>
+    <a class="button button-primary" ng-href="{{ authURL.url }}">Login With Github</a>
   </div>
 </div>
