--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -13,7 +13,7 @@
     <div class="four columns" id="left-sidebar">
 
       <div class="row sidebar">
-        <input type="text" placeholder="Search Gist" ng-model="searchGist" />
+        <input id="searchBar" type="text" placeholder="Search" ng-model="searchGist" />
       </div>
 
       <div class="row sidebar">
