--- a/public/views/createGist.html
+++ b/public/views/createGist.html
@@ -1,20 +1,29 @@
-<h1>Create Gist</h1>
-<div>
-  <fieldset>
-    <div>
-      <label for="new_gist_file">File Name</label>
-      <input id="new_gist_file" type="text" ng-model="new_gist.filename">
+<div class="container">
+  <div class="row" id="header">
+    <h1>Create Gist</h1>
+  </div>
+  <div class="row">
+    <hr class="style-two">
+  </div>
+  <div class="row">
+    <div id="editcontainer">
+      <fieldset>
+        <div>
+          <label for="new_gist_file">File Name</label>
+          <input id="new_gist_file" type="text" ng-model="new_gist.filename">
+        </div>
+           <div>
+          <label for="new_gist_description">Description</label>
+          <input id="new_gist_decription" type="text" ng-model="new_gist.description">
+        </div>
+        <div>
+          <label for="new_gist_content">Content</label>
+          <input id="new_gist_content" type="text" ng-model="new_gist.fileContent" class="u-full-width">
+        </div>
+        <div>
+          <button type="button" ng-click="GistService.postGists(cookies, new_gist); process_done();">Create Gist</button>
+        </div>
+      </fieldset>
     </div>
-       <div>
-      <label for="new_gist_description">Description</label>
-      <input id="new_gist_decription" type="text" ng-model="new_gist.description">
-    </div>
-    <div>
-      <label for="new_gist_content">Content</label>
-      <input id="new_gist_content" type="text" ng-model="new_gist.fileContent">
-    </div>
-    <div>
-      <button type="button" ng-click="GistService.postGists(cookies, new_gist); process_done();">Create Gist</button>
-    </div>
-  </fieldset>
+  </div>
 </div>
