--- a/public/views/editGist.html
+++ b/public/views/editGist.html
@@ -1,22 +1,26 @@
-<h1>Edit Gist</h1>
-<div>
-    <fieldset>
-      <div>
-        <label for="edit_gist_file">File Name: {{edit_gist.filename}}</label>
-      </div>
-      <div>
-        <label for="edit_gist_description">Description</label>
-        <input id="edit_gist_decription" type="text" ng-model="edit_gist.description">
-      </div>
-      <div>
-        <label for="edit_gist_content">Content</label>
-        <input id="edit_gist_content" type="text" ng-model="edit_gist.fileContent">
-      </div>
-      <div>
-        <button type="button" ng-click="GistService.editGist(cookies, edit_gist, gist_id); process_done()">Save</button>
-      </div>
-      <div>
-        <button type="button" ng-click="GistService.deleteGist(cookies, gist_id); process_done()">Delete Gist</button>
-      </div>
-    </fieldset>
+<div class="container">
+  <div class="row" id="header">
+    <h1>Edit Gist > {{edit_gist.filename}}</h1>
+  </div>
+  <div class="row">
+    <hr class="style-two">
+  </div>
+  <div class="row">
+    <div id="editcontainer">
+        <fieldset>
+          <div>
+            <label for="edit_gist_description">Description</label>
+            <input id="edit_gist_decription" type="text" ng-model="edit_gist.description">
+          </div>
+          <div>
+            <label for="edit_gist_content">Content</label>
+            <input id="edit_gist_content" type="textarea" ng-model="edit_gist.fileContent" class="u-full-width">
+          </div>
+          <div>
+            <button type="button" ng-click="GistService.editGist(cookies, edit_gist, gist_id); process_done()">Save</button>
+            <button type="button" ng-click="GistService.deleteGist(cookies, gist_id); process_done()">Delete Gist</button>
+          </div>
+        </fieldset>
+    </div>
+  </div>
 </div>
