--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -63,7 +63,7 @@ hr {
 #left-sidebar {
   height: 100%;
   border-right: 1px solid black;
-  box-shadow: 5px 0px 6px #AAA; }
+  box-shadow: 5px 3px 3px #AAA; }
 
 /* line 74, stdin */
 input#searchBar {
@@ -73,8 +73,11 @@ input#searchBar {
   border: 1px solid #309C92;
   color: black;
   background-color: #8DC2B1;
-  font-size: 1.5em;
-  color: white; }
+  font-size: 1.5em; }
+
+/* line 84, stdin */
+input#search[placeholder] {
+  color: black; }
 
 /* line 88, stdin */
 ul {
