--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,7 +1,17 @@
-<div class="container">
-  <div class="row">
-    <h1>Gist Manager</h1>
-    <a class="button button-primary" ng-href="/#/dashboard">Dashboard</a>
-    <a class="button button-primary" ng-href="{{ authURL.url }}">Login With Github</a>
+<div class="center-align col s12" id="landingPageCaption">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Octicons-gist.svg/90px-Octicons-gist.svg.png" alt="">
+  <div class="caption center-align">
+    <h4>Manage Your Github Gists Now!</h4>
+  </div>
+
+  <div class="row center-align">
+    <a ng-href="/#/dashboard" class="btn waves-effect waves-light">Enter Dashboard<i class="material-icons right">web</i>
+    </a>
   </div>
 </div>
+
+<!-- <div>
+  <span>
+    <a class="button button-primary" ng-href="{{ authURL.url }}">Login With Github</a>
+  </span>
+</div> -->
