--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,6 +1,6 @@
 // sass styles
 body {
-  background-color : #eee;
+  background-color : #4CAF50;
 }
 
 #header {
@@ -10,7 +10,9 @@ body {
 
   h1 {
     color : white;
-    text-shadow: 3px 2px 2px rgba(0, 0, 0, .3)
+    text-shadow: 3px 2px 2px rgba(0, 0, 0, .3);
+    font-family: sans-serif;
+    font-size: 5em;
   }
 }
 
@@ -21,30 +23,47 @@ div.row.main {
 }
 
 .row {
-  background-color : #fff;
-
 
   h1 {
     text-align : center;
     padding-top : 20px;
     padding-bottom : 15px;
     margin-bottom : 0px;
+
+    #headerGist {
+      padding-left: 10px;
+      background-color: #C8E6C9;
+      padding-right: 10px;
+      color: #000;
+    }
+
+    #headerManager {
+      color: #FFF;
+      margin-left: -16px;
+      padding-left: 10px;
+      padding-right: 10px;
+      background-color: #388E3C;
+    }
   }
 
   p {
     word-wrap : break-word;
   }
 }
+// Landing Page
+#landingPageCaption {
+  padding-top: 5%;
+  color: #212121;
+  background-color: #C8E6C9;
+  padding-bottom: 5%;
+}
 
-/* Gradient transparent - color - transparent */
+// Main Dashboard Views
 
 hr {
-  margin-bottom : 1.5rem;
 }
 .style-two {
-  border : 0;
   height : 2px;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
 #description-header {
@@ -85,14 +104,19 @@ input#search[placeholder] {
   color:black;
 }
 
-ul {
-  list-style-type : none;
-  li {
-    text-decoration : none;
-  }
-}
+// Commons
 
 a {
-    color : black;
+    color : red;
   text-decoration : none;
+}
+
+// Navigations
+.nav-wrapper {
+  background-color: #388E3C;
+}
+
+footer.page-footer {
+  margin-top: -1%;
+  background-color: #388E3C;
 }
