--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,25 +14,19 @@ body {
     font-family: sans-serif;
     font-size: 5em; }
 
-/* line 19, stdin */
-div.row.main {
-  height: 100%;
-  border-bottom-right-radius: 1em;
-  border-bottom-left-radius: 1em; }
-
-/* line 27, stdin */
+/* line 21, stdin */
 .row h1 {
   text-align: center;
   padding-top: 20px;
   padding-bottom: 15px;
   margin-bottom: 0px; }
-  /* line 33, stdin */
+  /* line 27, stdin */
   .row h1 #headerGist {
     padding-left: 10px;
     background-color: #C8E6C9;
     padding-right: 10px;
     color: #000; }
-  /* line 40, stdin */
+  /* line 34, stdin */
   .row h1 #headerManager {
     color: #FFF;
     margin-left: -16px;
@@ -40,45 +34,53 @@ div.row.main {
     padding-right: 10px;
     background-color: #388E3C; }
 
-/* line 49, stdin */
+/* line 43, stdin */
 .row p {
   word-wrap: break-word; }
 
-/* line 54, stdin */
+/* line 49, stdin */
 #landingPageCaption {
   padding-top: 5%;
   color: #212121;
   background-color: #C8E6C9;
   padding-bottom: 5%; }
 
-/* line 65, stdin */
+/* line 58, stdin */
+#left-panel {
+  background-color: #607D8B; }
+
+/* line 63, stdin */
+#right-panel {
+  background-color: #FFF; }
+
+/* line 69, stdin */
 .style-two {
   height: 2px; }
 
-/* line 69, stdin */
+/* line 73, stdin */
 #description-header {
   background-color: #8DC2B1;
   padding-left: 20px; }
 
-/* line 74, stdin */
+/* line 78, stdin */
 .sidebar {
   width: 80%;
   margin-right: auto;
   margin-left: auto; }
 
-/* line 80, stdin */
+/* line 84, stdin */
 #editcontainer {
   width: 60%;
   margin-right: auto;
   margin-left: auto; }
 
-/* line 87, stdin */
+/* line 91, stdin */
 #left-sidebar {
   height: 100%;
   border-right: 1px solid black;
   box-shadow: 5px 3px 3px #AAA; }
 
-/* line 93, stdin */
+/* line 97, stdin */
 input#searchBar {
   margin-bottom: 5px;
   margin-top: 5px;
@@ -88,20 +90,15 @@ input#searchBar {
   background-color: #8DC2B1;
   font-size: 1.5em; }
 
-/* line 103, stdin */
+/* line 107, stdin */
 input#search[placeholder] {
   color: black; }
 
-/* line 109, stdin */
-a {
-  color: red;
-  text-decoration: none; }
-
-/* line 115, stdin */
+/* line 119, stdin */
 .nav-wrapper {
   background-color: #388E3C; }
 
-/* line 119, stdin */
+/* line 123, stdin */
 footer.page-footer {
   margin-top: -1%;
   background-color: #388E3C; }
