--- a/public/views/editGist.html
+++ b/public/views/editGist.html
@@ -1,9 +1,7 @@
 <div class="container">
-  <div class="row" id="header">
-    <h1>Edit Gist > {{edit_gist.filename}}</h1>
-  </div>
   <div class="row">
-    <hr class="style-two">
+    <h2>Edit Gist</h2>
+    <h3 id="editGistTitle">{{edit_gist.filename}}</h3>
   </div>
   <div class="row">
     <div id="editcontainer">
