--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -3,17 +3,19 @@
 
     <div class="col s12 m4 l3" id="left-panel">
 
-      <ul class="collection with-header">
-        <li class="collection-header">
-          <input id="searchBar" type="text" placeholder="Gist Title" ng-model="searchGist" />
-        </li>
+      <ul class="collection">
+
+          <li class="collection-item" id="search">
+            <input id="searchBar" type="text" placeholder="Search Gist" ng-model="searchGist" />
+          </li>
+
 
         <a href="#">
           <li ng-click="display(gist.id)" class="collection-item" ng-repeat="gist in gists | filter:searchGist">
             {{ gist.description }}
-            <ul class="collection">
+            <!-- <ul class="collection">
               <li ng-repeat="file in gist.files">{{ file.filename }}</li>
-            </ul>
+            </ul> -->
           </li>
         </a>
 
@@ -23,20 +25,29 @@
 
     <div class="col s12 m8 l9" id="right-panel">
         <div class="row">
-          <a class="button" type="button" ng-href="/#/create">Create</a>
-          <a class="button" type="button" ng-href="/#/edit/{{ displayGist.id }}">Edit</a>
+            <span class="col s6">
+              <a class="waves-effect waves-light btn create" ng-href="/#/create">
+              Create
+              </a>
+            </span>
+
+            <span class="col s6">
+              <a class="waves-effect waves-light btn edit" ng-href="/#/edit/{{ displayGist.id }}">
+                Edit
+              </a>
+            </span>
         </div>
 
         <div class="row">
           <div ng-repeat="file in displayGist.files">
-            <div>
-              <label for="">Description: {{ displayGist.description }}</label>
+            <div class="row center-align">
+              <h4>{{ displayGist.description }}</h4>
             </div>
-            <div>
-              <label for="">File Name: {{ file.filename }}</label>
+            <div class="row">
+              <p id="gistFileName">File Name: {{ file.filename }}</p>
             </div>
-            <div>
-              <p>File Content: {{ file.content }}</p>
+            <div class = "row">
+              <p id="gistFileContent">{{ file.content }}</p>
             </div>
           </div>
         </div>
