--- a/public/views/editGist.html
+++ b/public/views/editGist.html
@@ -1,24 +1,23 @@
 <div class="container">
   <div class="row">
-    <h2>Edit Gist</h2>
-    <h3 id="editGistTitle">{{edit_gist.filename}}</h3>
+    <h3>Edit Gist</h3>
+    <h2 id="editGistTitle">{{edit_gist.description}}</h2>
+    <h6 id="editGistFileName">{{edit_gist.filename}}</h6>
   </div>
+    <form class="col s12">
+      <div class="row">
+        <div class="input-field col s12">
+          <textarea id="editGistContent" class="materialize-textarea" ng-model="edit_gist.fileContent" class="u-full-width"></textarea>
+        </div>
+      </div>
+    </form>
   <div class="row">
-    <div id="editcontainer">
-        <fieldset>
-          <div>
-            <label for="edit_gist_description">Description</label>
-            <input id="edit_gist_decription" type="text" ng-model="edit_gist.description">
-          </div>
-          <div>
-            <label for="edit_gist_content">Content</label>
-            <input id="edit_gist_content" type="textarea" ng-model="edit_gist.fileContent" class="u-full-width">
-          </div>
-          <div>
-            <button type="button" ng-click="GistService.editGist(cookies, edit_gist, gist_id); process_done()">Save</button>
-            <button type="button" ng-click="GistService.deleteGist(cookies, gist_id); process_done()">Delete Gist</button>
-          </div>
-        </fieldset>
-    </div>
+    <a class="waves-effect waves-light btn save" ng-click="GistService.editGist(cookies, edit_gist, gist_id); process_done()">
+      Save
+    </a>
+
+    <a class="waves-effect waves-light btn delete" ng-click="GistService.deleteGist(cookies, gist_id); process_done()">
+      Delete
+    </a>
   </div>
 </div>
