--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,13 +1,18 @@
-<div class="center-align col s12" id="landingPageCaption">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Octicons-gist.svg/90px-Octicons-gist.svg.png" alt="">
-  <div class="caption center-align">
-    <h4>Manage Your Github Gists Now!</h4>
+<div class="center-align col s12" id="landing">
+    <div class="row">
+        <h1>
+          <strong>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Octicons-gist.svg/90px-Octicons-gist.svg.png" alt="">
+            <span id="headerGist">Gist</span>
+            <span id="headerManager">Manager</span>
+          </strong>
+        </h1>
+    </div>
+    <h4>Create, manage, and organize Gists in a gist.</h4>
   </div>
 
   <div class="row center-align">
       <a ng-href="{{ authURL.url }}" class="btn waves-effect waves-light">Login With Github</a>
       <a ng-href="/#/dashboard" class="btn waves-effect waves-light">Enter Dashboard<i class="material-icons right">web</i></a>
   </div>
-
 </div>
-
