Fixed input js load priority for jquery and materialize CSS

--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,7 +1,14 @@
-<div class="center-align col s12" id="landingPageCaption">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Octicons-gist.svg/90px-Octicons-gist.svg.png" alt="">
-  <div class="caption center-align">
-    <h4>Manage Your Github Gists Now!</h4>
+<div class="center-align col s12" id="landing">
+    <div class="row">
+        <h1>
+          <strong>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Octicons-gist.svg/90px-Octicons-gist.svg.png" alt="">
+            <span id="headerGist">Gist</span>
+            <span id="headerManager">Manager</span>
+          </strong>
+        </h1>
+    </div>
+    <h4>Create, manage, and organize Gists in a gist.</h4>
   </div>
 
   <div class="row center-align">
@@ -9,9 +16,3 @@
     </a>
   </div>
 </div>
-
-<!-- <div>
-  <span>
-    <a class="button button-primary" ng-href="{{ authURL.url }}">Login With Github</a>
-  </span>
-</div> -->
