--- a/public/views/default.html
+++ b/public/views/default.html
@@ -10,8 +10,8 @@
   </div>
 </div>
 
-<!-- <div>
+<div>
   <span>
     <a class="button button-primary" ng-href="{{ authURL.url }}">Login With Github</a>
   </span>
-</div> -->
+</div>
