--- a/public/views/default.html
+++ b/public/views/default.html
@@ -5,13 +5,13 @@
   </div>
 
   <div class="row center-align">
-    <a ng-href="/#/dashboard" class="btn waves-effect waves-light">Enter Dashboard<i class="material-icons right">web</i>
-    </a>
+    <span class="col s6">
+      <a ng-href="/#/dashboard" class="btn waves-effect waves-light">Enter Dashboard<i class="material-icons right">web</i></a>
+    </span>
+    <span class="col s6">
+      <a ng-href="{{ authURL.url }}" class="btn waves-effect waves-light">Login With Github</a>
+    </span>
   </div>
+
 </div>
 
-<div>
-  <span>
-    <a class="button button-primary" ng-href="{{ authURL.url }}">Login With Github</a>
-  </span>
-</div>
