--- a/public/views/default.html
+++ b/public/views/default.html
@@ -1,18 +1,10 @@
-<div class="center-align col s12" id="landing">
-    <div class="row">
-        <h1>
-          <strong>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Octicons-gist.svg/90px-Octicons-gist.svg.png" alt="">
-            <span id="headerGist">Gist</span>
-            <span id="headerManager">Manager</span>
-          </strong>
-        </h1>
-    </div>
-    <h4>Create, manage, and organize Gists in a gist.</h4>
-  </div>
-
-  <div class="row center-align">
-    <a ng-href="/#/dashboard" class="btn waves-effect waves-light">Enter Dashboard<i class="material-icons right">web</i>
-    </a>
+<div class="row header">
+  <div class="center-align col s12" id="landing">
+      <img src="/images/logo.png" width="15%"  alt="Gist Manager">
+      <span class="logoname">
+        <img src="/images/logoname.png"  width="60%" alt="Gist Manager">
+      </span>
+      <div class="tagline">A simple way to create, manage, and organize Gists.</div>
+      <a ng-href="/#/dashboard" class="btn waves-effect waves-light"><i class="material-icons left">web</i>Dashboard</a>
   </div>
 </div>
