--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,147 +14,170 @@ body {
     font-family: sans-serif;
     font-size: 5em; }
 
-/* line 21, stdin */
-.row h1 {
-  text-align: center;
-  padding-top: 20px;
-  padding-bottom: 15px;
-  margin-bottom: 0px; }
-  /* line 27, stdin */
-  .row h1 #headerGist {
-    padding-left: 10px;
-    background-color: #C8E6C9;
-    padding-right: 10px;
-    color: #000; }
-  /* line 34, stdin */
-  .row h1 #headerManager {
-    color: #FFF;
-    margin-left: -16px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: #388E3C; }
+/* line 23, stdin */
+.row h1 #headerGist {
+  padding-left: 10px;
+  background-color: #C8E6C9;
+  padding-right: 10px;
+  color: #000;
+  font-size: 36px; }
 
-/* line 43, stdin */
+/* line 31, stdin */
+.row h1 #headerManager {
+  color: #FFF;
+  margin-left: -16px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: #388E3C; }
+
+/* line 40, stdin */
 .row p {
   word-wrap: break-word; }
 
-/* line 49, stdin */
-#landingPageCaption {
-  padding-top: 5%;
-  color: #212121;
-  background-color: #C8E6C9;
-  padding-bottom: 5%; }
+/* line 46, stdin */
+#landing {
+  padding: 20% 10%;
+  color: #FFF; }
 
-/* line 57, stdin */
+/* line 51, stdin */
+.header {
+  display: table;
+  position: relative;
+  width: 100%;
+  background-color: #4CAF50;
+  background: url("/images/background.jpeg") no-repeat center center scroll;
+  background-size: cover;
+  -o-background-size: cover; }
+
+/* line 62, stdin */
 #collection-article {
   margin-bottom: 0px;
   background-color: #FFF;
   height: inherit; }
 
-/* line 63, stdin */
+/* line 68, stdin */
 #left-panel {
   padding: 0px; }
-  /* line 66, stdin */
+  /* line 71, stdin */
   #left-panel ul.collection {
     margin: 0px; }
 
-/* line 71, stdin */
+/* line 76, stdin */
 #right-panel {
   border-left: 2px dashed #B6B6B6; }
 
-/* line 75, stdin */
+/* line 80, stdin */
 #search:placeholder {
   color: #000; }
 
-/* line 79, stdin */
+/* line 84, stdin */
 input::placeholder {
   color: #000; }
 
-/* line 83, stdin */
+/* line 88, stdin */
 input#searchBar {
   color: #212121;
   font-size: 1.6em;
   border: none;
   margin-bottom: 0px; }
 
-/* line 90, stdin */
+/* line 95, stdin */
 input#search[placeholder] {
   color: black; }
 
-/* line 96, stdin */
+/* line 101, stdin */
 li.collection-item.ng-binding.ng-scope {
   color: #000;
   border-top: 1px dashed #B6B6B6;
   border-bottom: 1px dashed #B6B6B6; }
 
-/* line 104, stdin */
+/* line 109, stdin */
 li.collection-item.ng-binding.ng-scope:hover {
   background-color: #C8E6C9; }
 
-/* line 109, stdin */
+/* line 114, stdin */
 #right-panel {
   background-color: #FFF; }
 
-/* line 114, stdin */
+/* line 119, stdin */
 #btn-container-article {
   margin-top: 12px; }
 
-/* line 118, stdin */
+/* line 123, stdin */
 .crudButtons {
   background-color: #388E3C;
   padding-top: 9px;
   padding-bottom: 9px; }
 
-/* line 124, stdin */
+/* line 129, stdin */
 .btn-create-edit {
   height: 40px; }
 
-/* line 129, stdin */
+/* line 134, stdin */
 .btn.create, .btn.edit {
   height: 100%;
   width: 100%;
   font-size: 1.6em; }
 
-/* line 137, stdin */
+/* line 142, stdin */
 div.view-gist-info {
   padding-left: 7%;
   padding-right: 7%; }
-  /* line 141, stdin */
+  /* line 146, stdin */
   div.view-gist-info #gistFileName {
     margin-top: 0px;
     color: #388E3C;
     margin-top: 0px; }
-  /* line 147, stdin */
+  /* line 152, stdin */
   div.view-gist-info #gistFileContent {
     margin-top: 0px; }
 
-/* line 152, stdin */
+/* line 157, stdin */
 h4#gistTitle {
   margin-top: 0px;
   margin-bottom: 0px; }
 
-/* line 159, stdin */
+/* line 164, stdin */
 #editGistTitle {
   color: #FFF;
   margin-bottom: 0px;
   margin-top: -10px; }
 
-/* line 164, stdin */
+/* line 169, stdin */
 #editGistFileName {
   margin-top: 0px;
   color: #C8E6C9; }
 
-/* line 168, stdin */
+/* line 173, stdin */
 #editGistContent {
   background-color: #FFF;
   padding-left: 4%;
   padding-right: 4%; }
 
-/* line 176, stdin */
+/* line 178, stdin */
+.tagline {
+  color: #FFF;
+  font-size: 20px;
+  padding: 10px 0; }
+
+/* line 183, stdin */
+.btn {
+  background-color: #727272; }
+
+/* line 186, stdin */
+.logoname {
+  padding-left: 20px; }
+
+/* line 192, stdin */
 .nav-wrapper {
   background-color: #388E3C; }
 
-/* line 180, stdin */
+@media screen and (max-width: 480px) {
+  /* line 196, stdin */
+  .tagline {
+    font-size: 14px; } }
+
+/* line 200, stdin */
 footer.page-footer {
   margin-top: 0px;
   padding-top: 0px;
