--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -19,16 +19,13 @@ body {
 .row {
 
   h1 {
-    text-align : center;
-    padding-top : 20px;
-    padding-bottom : 15px;
-    margin-bottom : 0px;
 
     #headerGist {
       padding-left: 10px;
       background-color: #C8E6C9;
       padding-right: 10px;
       color: #000;
+      font-size: 36px;
     }
 
     #headerManager {
@@ -46,13 +43,21 @@ body {
 }
 
 // Landing Page
-#landingPageCaption {
-  padding-top: 5%;
-  color: #212121;
-  background-color: #C8E6C9;
-  padding-bottom: 5%;
+#landing {
+  padding: 20% 10%;
+  color: #FFF;
 }
 
+.header {
+    display: table;
+    position: relative;
+    width: 100%;
+    // height: 400px;
+    background-color: #4CAF50;
+    background: url('/images/background.jpeg') no-repeat center center scroll;
+    background-size: cover;
+    -o-background-size: cover;
+}
 // ------------- Main Dashboard Views
 #collection-article {
   margin-bottom: 0px;
@@ -170,13 +175,28 @@ h4#gistTitle{
   padding-left: 4%;
   padding-right: 4%;
 }
+.tagline{
+  color:#FFF;
+  font-size: 20px;
+  padding: 10px 0;
+}
+.btn {
+  background-color: #727272;
+}
+.logoname{
+  padding-left: 20px
+}
 // Commons
 
 // Navigations
 .nav-wrapper {
   background-color: #388E3C;
 }
-
+@media screen and (max-width: 480px) {
+    .tagline {
+        font-size: 14px;
+    }
+}
 footer.page-footer {
   margin-top: 0px;
   padding-top:0px;
